# dio-task-checker

./: .env  .gitignore  Dockerfile  Readme.md  docker-compose.yml  evaluate.py  evaluated_tasks.csv  main.py  pyproject.toml  requirements.txt  задания февраль.xls
notebooks/: analytics.ipynb  evaluated_task_rates.csv  view.ipynb
prompts/: Комментатор_заданий_сотруднику.txt  Оценщик_заданий_сотруднику.txt
raw_data/: задания февраль + темы.xls  задания февраль работы.xls
scripts/: evaluate_tasks.py  evaluated_tasks_with_jobs.csv
src/: models.py  settings.py  task_assistant.py
src/ai_agent/: __init__.py  agent.py  state.py  task_ai_agent.py
src/ai_agent/format_instructions/: __init__.py  rate_json.py
src/ai_agent/nodes/: __init__.py  comments_node.py  rate_node.py
src/api/: app.py
src/api/v1/controllers/: __init__.py  task_controller.py
src/api/v1/routers/: task_router.py
src/core/entities/: __init__.py  task.py
src/core/use_cases/: __init__.py  task_assistant_use_case.py
src/di/: container.py  provider.py
src/dio_task_checker/: agent.py  app.py  constants.py  ioc.py  prompts.py  router.py  schemas.py  settings.py
src/dio_task_checker/ai_agent/: nodes.py  state.py  templates.py  utils.py  workflow.py
