[project]
name = "diotasks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dishka>=1.5.2",
    "langchain>=0.3.21",
    "langchain-gigachat>=0.3.8",
    "langgraph>=0.3.21",
    "litestar>=2.15.1",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
]
